--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
+  <base href="/">
   <meta charset="utf-8">
   <title>Apollo</title>
-  <base href="/">
+  
 
   <!-- cambiar a versiones locales -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,9 +18,9 @@
 <body>
   <app-root>Cargando</app-root>
 
-  <script src="./js/jquery.js"></script>
-  <script src="./js/jquery.easing.min.js"></script>
-  <script src="./js/grayscale.js"></script>
+  <script type="text/javascript" src="./assets/js/jquery.js"></script>
+  <script type="text/javascript" src="./assets/js/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="./assets/js/grayscale.js"></script>
 
 </body>
 </html>
