agregar metodos faltantes a los servicios tambien agrego algunos cambios a la vista de creacion de rv

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -16,7 +16,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Cargando</app-root>
+  <apollo-root>Cargando</apollo-root>
 
   <script type="text/javascript" src="./assets/js/jquery.js"></script>
   <script type="text/javascript" src="./assets/js/jquery.easing.min.js"></script>
