--- a/client/src/index.html
+++ b/client/src/index.html
@@ -17,5 +17,8 @@
   <script type="text/javascript" src="assets/js/jquery.js"></script>
   <script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSA-Sc8yoe_NIGqOwTGoNPiKge0KRK_wo&libraries=places"></script>
+
 </body>
 </html>
