--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,14 +11,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <apollo-root>Cargando</apollo-root>
 
-  <script type="text/javascript" src="assets/js/jquery.js"></script>
-  <script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>
-  <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+<body>
+  <apollo-root>
+    <div class="loading align-full">
+      <span>Apollo</span>
+    </div>
+  </apollo-root>
+
+  <script src="assets/js/jquery.js"></script>
+  <script src="assets/js/jquery.easing.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSA-Sc8yoe_NIGqOwTGoNPiKge0KRK_wo&libraries=places"></script>
-
 </body>
 </html>
