--- a/client/tests/CP05/1.html
+++ b/client/tests/CP05/1.html
@@ -13,54 +13,40 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/welcome</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>css=span.network-name</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=account-chooser-add-account</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=Email</td>
-	<td>apollotripsarg@gmail.com</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=next</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=Passwd</td>
-	<td>juanmatifede</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=next</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=submit_approve_access</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=nombre</td>
+	<td>/home</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=(//button[@type='submit'])[2]</td>
+	<td>link=1 viajes creados</td>
 	<td></td>
 </tr>
+<tr>
+	<td>click</td>
+	<td>css=button.close</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=button.close</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=1 viajes creados</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=div.modal-footer &gt; button.btn.btn-default</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=div.modal-footer &gt; button.btn.btn-default</td>
+	<td></td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
