--- a/client/tests/CP01/9.html
+++ b/client/tests/CP01/9.html
@@ -57,7 +57,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>clickAtAndWait</td>
 	<td>xpath=(//button[@type='submit'])[2]</td>
 	<td></td>
 </tr>
@@ -66,7 +66,6 @@
 	<td>id=username</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
