--- a/client/tests/CP05/2.html
+++ b/client/tests/CP05/2.html
@@ -4,63 +4,49 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://localhost:4200/" />
-<title>1</title>
+<title>2</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">1</td></tr>
+<tr><td rowspan="1" colspan="3">2</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/welcome</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>css=span.network-name</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=account-chooser-add-account</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=Email</td>
-	<td>apollotripsarg@gmail.com</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=next</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=Passwd</td>
-	<td>juanmatifede</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=next</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=submit_approve_access</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=nombre</td>
+	<td>/home</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=(//button[@type='submit'])[2]</td>
+	<td>link=0 viajes favoritos</td>
 	<td></td>
 </tr>
+<tr>
+	<td>click</td>
+	<td>css=#favoritasModal &gt; div.modal-dialog &gt; div.modal-content &gt; div.modal-header &gt; button.close</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=#favoritasModal &gt; div.modal-dialog &gt; div.modal-content &gt; div.modal-header &gt; button.close</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=0 viajes favoritos</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=#favoritasModal &gt; div.modal-dialog &gt; div.modal-content &gt; div.modal-footer &gt; button.btn.btn-default</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=#favoritasModal &gt; div.modal-dialog &gt; div.modal-content &gt; div.modal-footer &gt; button.btn.btn-default</td>
+	<td></td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
