--- a/client/src/index.html
+++ b/client/src/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <apollo-root>
-    <div class="loading align-full">
+    <div class="loading center-xy">
       <span>Apollo</span>
     </div>
   </apollo-root>
